--- a/Coding Exam.ipynb
+++ b/Coding Exam.ipynb
@@ -160,11 +160,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From Coderbyte\n",
+    "\n",
+    "Have the function `LetterChanges(str)` take the str parameter being passed and modify it using the following algorithm. Replace every letter in the string with the letter following it in the alphabet (ie. c becomes d, z becomes a). Then capitalize every vowel in this new string (a, e, i, o, u) and finally return this modified string"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def LetterChanges(str): \n",
+    "    def map_to_next(char):\n",
+    "        all_chars = list('abcdefghijklmnopqrstuvwxyz')\n",
+    "        return all_chars[(all_chars.index(char) + 1) % len(all_chars)]\n",
+    "        \n",
+    "    def capitalize_vowel(char):\n",
+    "        return char.upper() if char in 'aeiou' else char\n",
+    "\n",
+    "    # code goes here \n",
+    "    return ''.join([capitalize_vowel(map_to_next(char)) \n",
+    "                    if char.isalpha() else char for char in str])\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
